--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <!-- Brand -->
       <a href="#" class="flex items-center gap-3">
         <!-- Image logo (default) -->
-        <img src="Assets/Images/logo.svg" alt="Smart Alarms logo"
+        <img src="./Assets/Images/logo.svg" alt="Smart Alarms logo"
           class="logo-img h-[80px] w-auto transition-all duration-300">
         <!-- Text logo (shown after scroll) -->
         <span class="text-logo hidden font-extrabold tracking-tight text-2xl md:text-3xl">SMART ALARMS</span>
