--- a/pay-online.html
+++ b/pay-online.html
@@ -370,7 +370,7 @@
 
     // Nav
     $('#btnBack').addEventListener('click', ()=>{
-      if (current===1) { history.length>1 ? history.back() : location.href='/'; return; }
+      if (current===1) { history.length>1 ? history.back() : location.href='/index.html'; return; }
       current = Math.max(1, current-1); render();
     });
 
