--- a/index.html
+++ b/index.html
@@ -400,9 +400,9 @@
       <nav class="hidden md:flex items-center gap-6 text-[15px]">
         <a href="#features" class="hover:text-accent">Home</a>
         <a href="pay-online.html" class="hover:text-accent">Pay Online</a>
-        <a href="#stats" class="hover:text-accent">Security Packages</a>
-        <a href="#dealers" class="hover:text-accent">About Us</a>
-        <a href="#contact" class="hover:text-accent">Contact</a>
+        <a href="security-packages.html" class="hover:text-accent">Security Packages</a>
+        <a href="about.html" class="hover:text-accent">About Us</a>
+        <a href="contact.html" class="hover:text-accent">Contact</a>
       </nav>
 
       <!-- Actions / mobile trigger -->
