--- a/security-packages.html
+++ b/security-packages.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -28,27 +29,68 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
+    rel="stylesheet">
   <style>
-    body { font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial; background:#eaf1f5; }
+    body {
+      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+      background: #eaf1f5;
+    }
 
     /* Buttons */
-    .btn { display:inline-flex; align-items:center; justify-content:center; font-weight:800; border-radius:9999px; padding:1rem 1.35rem; transition:all .22s ease; }
-    .btn:focus-visible { outline:none; box-shadow:0 0 0 4px rgba(0,191,230,.35); }
-    .btn-magic { color:#fff; background-image:linear-gradient(to bottom,#1f2937,#0f172a); box-shadow:0 18px 24px -18px rgba(0,0,0,.55),0 6px 18px -10px rgba(19,51,77,.45); border:1px solid rgba(255,255,255,.06); }
-    .btn-magic:hover { background-image:linear-gradient(to bottom,#00bfe6,#009bb8); transform:translateY(-2px); box-shadow:0 26px 46px -22px rgba(0,191,230,.55),0 12px 28px -16px rgba(0,155,184,.45); }
-    .btn-outline { background:#fff; color:#0f172a; border:1px solid #d7dee6; }
-    .btn-outline:hover { background:#f8fafc; }
+    .btn {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-weight: 800;
+      border-radius: 9999px;
+      padding: 1rem 1.35rem;
+      transition: all .22s ease;
+    }
+
+    .btn:focus-visible {
+      outline: none;
+      box-shadow: 0 0 0 4px rgba(0, 191, 230, .35);
+    }
+
+    .btn-magic {
+      color: #fff;
+      background-image: linear-gradient(to bottom, #1f2937, #0f172a);
+      box-shadow: 0 18px 24px -18px rgba(0, 0, 0, .55), 0 6px 18px -10px rgba(19, 51, 77, .45);
+      border: 1px solid rgba(255, 255, 255, .06);
+    }
+
+    .btn-magic:hover {
+      background-image: linear-gradient(to bottom, #00bfe6, #009bb8);
+      transform: translateY(-2px);
+      box-shadow: 0 26px 46px -22px rgba(0, 191, 230, .55), 0 12px 28px -16px rgba(0, 155, 184, .45);
+    }
+
+    .btn-outline {
+      background: #fff;
+      color: #0f172a;
+      border: 1px solid #d7dee6;
+    }
+
+    .btn-outline:hover {
+      background: #f8fafc;
+    }
 
     /* floating “Most popular” chip */
-    .chip { position:absolute; top:-18px; left:50%; transform:translateX(-50%); }
+    .chip {
+      position: absolute;
+      top: -18px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
 
     /* ---- NAV HOVER EFFECTS ---- */
     .navlink {
       position: relative;
-      color: rgba(255,255,255,.86);
+      color: rgba(255, 255, 255, .86);
       transition: color .18s ease, text-shadow .18s ease;
     }
+
     .navlink::after {
       content: "";
       position: absolute;
@@ -63,27 +105,37 @@
       transition: transform .22s ease;
       opacity: .9;
     }
+
     .navlink:hover {
-      color: #9be8ff;              /* soft cyan tint */
-      text-shadow: 0 0 12px rgba(0,191,230,.35);
+      color: #9be8ff;
+      /* soft cyan tint */
+      text-shadow: 0 0 12px rgba(0, 191, 230, .35);
     }
-    .navlink:hover::after { transform: scaleX(1); }
+
+    .navlink:hover::after {
+      transform: scaleX(1);
+    }
 
     /* Keep active item looking “selected” and don’t double-underline on hover */
     .navlink-active {
       color: #fff;
       border-bottom-width: 2px;
-      border-color: #67e8f9; /* Tailwind’s cyan-300-ish */
+      border-color: #67e8f9;
+      /* Tailwind’s cyan-300-ish */
       padding-bottom: 2px;
     }
-    .navlink-active::after { display: none; }
+
+    .navlink-active::after {
+      display: none;
+    }
   </style>
 </head>
 
 <body class="bg-slate-100 overflow-hidden">
 
   <!-- HEADER -->
-  <header class="fixed inset-x-0 top-0 z-40 backdrop-blur bg-gradient-to-b from-[#0c2536] to-[#15384d] text-white shadow-header">
+  <header
+    class="fixed inset-x-0 top-0 z-40 backdrop-blur bg-gradient-to-b from-[#0c2536] to-[#15384d] text-white shadow-header">
     <div class="mx-auto max-w-7xl px-4 lg:px-8 h-16 lg:h-20 flex items-center justify-between">
       <a href="index.html" class="flex items-baseline gap-2">
         <span class="text-2xl lg:text-3xl font-extrabold tracking-wide">SMART</span>
@@ -109,7 +161,8 @@
       <!-- Title + Toggle -->
       <section class="mt-2 mb-4 flex flex-col md:flex-row md:items-end md:justify-between gap-4">
         <div>
-          <h1 class="text-[34px] sm:text-[40px] lg:text-[46px] font-extrabold text-slate-900 tracking-tight">Pricing Plans</h1>
+          <h1 class="text-[34px] sm:text-[40px] lg:text-[46px] font-extrabold text-slate-900 tracking-tight">Pricing
+            Plans</h1>
           <p class="mt-1 text-slate-600">Impressive features to help your company scale rapidly</p>
         </div>
 
@@ -155,7 +208,8 @@
           </article>
 
           <!-- Pro (Most popular) -->
-          <article class="rounded-3xl bg-white border border-sky-200 shadow-card overflow-visible flex flex-col relative ring-2 ring-sky-300/80">
+          <article
+            class="rounded-3xl bg-white border border-sky-200 shadow-card overflow-visible flex flex-col relative ring-2 ring-sky-300/80">
             <!-- centered chip (outside the top edge) -->
             <div class="chip">
               <span class="bg-emerald-100 text-emerald-700 rounded-full px-3 py-1 text-xs font-semibold shadow">
@@ -226,5 +280,5 @@
     toggle?.addEventListener('change', e => updatePrices(e.target.checked));
   </script>
 </body>
-</html>
 
+</html>
