--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     tailwind.config = {
       theme: {
         extend: {
-          colors: { navy:'#13334d', brand:{500:'#00bfe6',700:'#009bb8'} },
+          colors: { navy:'#13334d', brand:{500:'#00bfe6',700:'#009bb8'}, accent:'#00bfe6' },
           boxShadow:{ header:'0 12px 30px -10px rgba(0,0,0,.35)', card:'0 18px 40px -16px rgba(2,6,23,.18)' },
           borderRadius:{ '3xl':'1.75rem' }
         }
@@ -24,7 +24,7 @@
 
   <style>
     body{font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial;background:#eaf1f5}
-    .btn{display:inline-flex;align-items:center;justify-content:center;font-weight:800;border-radius:9999px;padding:1rem 1.35rem;transition:all .22s ease}
+    .btn{display:inline-flex;align-items:center;justify-content:center;font-weight:800;border-radius:9999px;padding:.9rem 1.15rem;transition:all .22s ease}
     .btn:focus-visible{outline:none;box-shadow:0 0 0 4px rgba(0,191,230,.35)}
     .btn-magic{color:#fff;background-image:linear-gradient(to bottom,#1f2937,#0f172a);box-shadow:0 18px 24px -18px rgba(0,0,0,.55),0 6px 18px -10px rgba(19,51,77,.45);border:1px solid rgba(255,255,255,.06)}
     .btn-magic:hover{background-image:linear-gradient(to bottom,#00bfe6,#009bb8);transform:translateY(-2px);box-shadow:0 26px 46px -22px rgba(0,191,230,.55),0 12px 28px -16px rgba(0,155,184,.45)}
@@ -37,93 +37,97 @@
     .navlink-active::after{display:none}
   </style>
 </head>
-<body class="bg-slate-100">
+<body class="bg-slate-100 overflow-x-hidden">
+  <!-- SCRIM -->
+  <div id="scrim" class="fixed inset-0 bg-black/40 opacity-0 pointer-events-none transition-opacity z-40"></div>
+
+  <!-- MOBILE MENU DRAWER (right) -->
+  <aside id="mobileMenu" class="fixed top-0 right-0 h-full w-80 max-w-[86vw] translate-x-full transition-transform z-50 bg-gradient-to-b from-[#0c2536] to-[#15384d] text-white shadow-2xl">
+    <div class="px-5 py-4 flex items-center justify-between border-b border-white/10">
+      <a href="index.html" class="flex items-baseline gap-2">
+        <span class="text-2xl font-extrabold tracking-wide">SMART</span>
+        <span class="text-2xl font-extrabold tracking-wide text-cyan-300">ALARMS</span>
+      </a>
+      <button id="closeMenu" aria-label="Close menu" class="p-2 rounded-xl hover:bg-white/10 focus:outline-none focus:ring-2 focus:ring-cyan-300">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"/></svg>
+      </button>
+    </div>
+    <nav class="px-5 py-3">
+      <a class="block py-3 navlink" href="index.html">Home</a>
+      <a class="block py-3 navlink" href="pay-online.html">Pay Online</a>
+      <a class="block py-3 navlink" href="security-packages.html">Security Packages</a>
+      <a class="block py-3 navlink" href="medical-pendant.html">Medical Pendant</a>
+      <a class="block py-3 navlink navlink-active" href="about.html">About Us</a>
+      <a class="block py-3 navlink" href="contact.html">Contact</a>
+    </nav>
+    <div class="px-5 py-4 border-t border-white/10">
+      <a href="quote.html" class="btn btn-magic w-full rounded-2xl">Get a Quote</a>
+    </div>
+  </aside>
 
   <!-- Header -->
-  <header class="fixed inset-x-0 top-0 z-40 backdrop-blur bg-gradient-to-b from-[#0c2536] to-[#15384d] text-white shadow-header">
-    <div class="mx-auto max-w-7xl px-4 lg:px-8 h-16 lg:h-20 flex items-center justify-between">
+  <header class="fixed inset-x-0 top-0 z-30 backdrop-blur bg-gradient-to-b from-[#0c2536] to-[#15384d] text-white shadow-header">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 h-16 lg:h-20 flex items-center justify-between">
       <a href="index.html" class="flex items-baseline gap-2">
         <span class="text-2xl lg:text-3xl font-extrabold tracking-wide">SMART</span>
         <span class="text-2xl lg:text-3xl font-extrabold tracking-wide text-cyan-300">ALARMS</span>
       </a>
-      <nav class="hidden md:flex items-center gap-7 text-[15px]">
-        <a class="navlink" href="index.html">Home</a>
-        <a class="navlink" href="pay-online.html">Pay Online</a>
-        <a class="navlink" href="security-packages.html">Security Packages</a>
-        <a class="navlink" href="medical-pendant.html">Medical Pendant</a>
-        <a class="navlink navlink-active" href="about.html">About Us</a>
-        <a class="navlink" href="contact.html">Contact</a>
-      </nav>
-      <a href="quote.html" class="btn btn-magic rounded-2xl hidden sm:inline-flex">Get a Quote</a>
+      <div class="flex items-center gap-3">
+        <nav class="hidden md:flex items-center gap-7 text-[15px]">
+          <a class="navlink" href="index.html">Home</a>
+          <a class="navlink" href="pay-online.html">Pay Online</a>
+          <a class="navlink" href="security-packages.html">Security Packages</a>
+          <a class="navlink" href="medical-pendant.html">Medical Pendant</a>
+          <a class="navlink navlink-active" href="about.html">About Us</a>
+          <a class="navlink" href="contact.html">Contact</a>
+        </nav>
+        <a href="quote.html" class="btn btn-magic rounded-2xl hidden sm:inline-flex">Get a Quote</a>
+        <button id="menuBtn" class="md:hidden p-2 rounded-xl hover:bg-white/10 focus:outline-none focus:ring-2 focus:ring-cyan-300" aria-label="Open menu" aria-controls="mobileMenu" aria-expanded="false">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/></svg>
+        </button>
+      </div>
     </div>
   </header>
 
   <main class="pt-24 lg:pt-28">
-    <div class="mx-auto max-w-7xl px-4 lg:px-8">
+    <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
 
       <!-- Hero / Intro -->
-      <section class="rounded-3xl bg-gradient-to-br from-fuchsia-500/20 via-sky-400/20 to-cyan-400/20 border border-white/40 shadow-card p-8 lg:p-12">
-        <h1 class="text-4xl lg:text-5xl font-extrabold text-slate-900">We make safety simple.</h1>
-        <p class="mt-3 text-slate-700 max-w-2xl">
-          Smart Alarms builds reliable, privacy-respecting security systems for homes and businesses.
-          From smart sensors to 24/7 monitoring, we focus on worry-free protection with delightful UX.
-        </p>
-        <div class="mt-6 flex gap-3">
+      <section class="rounded-3xl bg-gradient-to-br from-fuchsia-500/20 via-sky-400/20 to-cyan-400/20 border border-white/40 shadow-card p-6 sm:p-8 lg:p-12">
+        <h1 class="text-3xl sm:text-4xl lg:text-5xl font-extrabold text-slate-900 leading-tight">We make safety simple.</h1>
+        <p class="mt-3 text-slate-700 max-w-2xl">Smart Alarms builds reliable, privacy-respecting security systems for homes and businesses. From smart sensors to 24/7 monitoring, we focus on worry-free protection with delightful UX.</p>
+        <div class="mt-6 flex flex-col sm:flex-row gap-3">
           <a href="pricing.html" class="btn btn-magic">View Packages</a>
           <a href="contact.html" class="btn btn-outline">Talk to Sales</a>
         </div>
       </section>
 
       <!-- Stats -->
-      <section class="mt-10 grid grid-cols-2 sm:grid-cols-4 gap-5">
-        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card">
-          <div class="text-3xl font-black text-slate-900">30k+</div><div class="text-slate-600 text-sm">Devices installed</div>
-        </div>
-        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card">
-          <div class="text-3xl font-black text-slate-900">99.98%</div><div class="text-slate-600 text-sm">Uptime</div>
-        </div>
-        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card">
-          <div class="text-3xl font-black text-slate-900">4.8/5</div><div class="text-slate-600 text-sm">Customer rating</div>
-        </div>
-        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card">
-          <div class="text-3xl font-black text-slate-900">24/7</div><div class="text-slate-600 text-sm">Monitoring</div>
-        </div>
+      <section class="mt-8 sm:mt-10 grid grid-cols-2 sm:grid-cols-4 gap-4 sm:gap-5">
+        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card"><div class="text-3xl font-black text-slate-900">30k+</div><div class="text-slate-600 text-sm">Devices installed</div></div>
+        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card"><div class="text-3xl font-black text-slate-900">99.98%</div><div class="text-slate-600 text-sm">Uptime</div></div>
+        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card"><div class="text-3xl font-black text-slate-900">4.8/5</div><div class="text-slate-600 text-sm">Customer rating</div></div>
+        <div class="rounded-2xl bg-white border border-slate-200 p-5 text-center shadow-card"><div class="text-3xl font-black text-slate-900">24/7</div><div class="text-slate-600 text-sm">Monitoring</div></div>
       </section>
 
       <!-- Mission + Values -->
       <section class="mt-10 grid lg:grid-cols-2 gap-8">
-        <article class="rounded-3xl bg-white border border-slate-200 p-7 lg:p-9 shadow-card">
+        <article class="rounded-3xl bg-white border border-slate-200 p-6 sm:p-7 lg:p-9 shadow-card">
           <h2 class="text-2xl font-extrabold text-slate-900">Our mission</h2>
-          <p class="mt-3 text-slate-700">
-            Bring enterprise-grade security to everyone, while staying human, transparent, and sustainable.
-            We obsess over details so setup is fast, the app is friendly, and alerts are crystal-clear.
-          </p>
+          <p class="mt-3 text-slate-700">Bring enterprise-grade security to everyone, while staying human, transparent, and sustainable. We obsess over details so setup is fast, the app is friendly, and alerts are crystal-clear.</p>
           <ul class="mt-5 space-y-2 text-slate-700">
             <li>✔ Privacy by design</li>
             <li>✔ No-nonsense pricing</li>
             <li>✔ Accessible support</li>
           </ul>
         </article>
-
-        <article class="rounded-3xl bg-white border border-slate-200 p-7 lg:p-9 shadow-card">
+        <article class="rounded-3xl bg-white border border-slate-200 p-6 sm:p-7 lg:p-9 shadow-card">
           <h2 class="text-2xl font-extrabold text-slate-900">Our values</h2>
           <div class="grid sm:grid-cols-2 gap-4 mt-4">
-            <div class="rounded-2xl border border-slate-200 p-4">
-              <h3 class="font-semibold text-slate-900">Reliability</h3>
-              <p class="text-sm text-slate-700 mt-1">Hardware you can trust, alerts you can act on.</p>
-            </div>
-            <div class="rounded-2xl border border-slate-200 p-4">
-              <h3 class="font-semibold text-slate-900">Respect</h3>
-              <p class="text-sm text-slate-700 mt-1">We earn your data with transparency and care.</p>
-            </div>
-            <div class="rounded-2xl border border-slate-200 p-4">
-              <h3 class="font-semibold text-slate-900">Speed</h3>
-              <p class="text-sm text-slate-700 mt-1">Rapid installs, instant notifications, quick help.</p>
-            </div>
-            <div class="rounded-2xl border border-slate-200 p-4">
-              <h3 class="font-semibold text-slate-900">Craft</h3>
-              <p class="text-sm text-slate-700 mt-1">Delightful details in both software and hardware.</p>
-            </div>
+            <div class="rounded-2xl border border-slate-200 p-4"><h3 class="font-semibold text-slate-900">Reliability</h3><p class="text-sm text-slate-700 mt-1">Hardware you can trust, alerts you can act on.</p></div>
+            <div class="rounded-2xl border border-slate-200 p-4"><h3 class="font-semibold text-slate-900">Respect</h3><p class="text-sm text-slate-700 mt-1">We earn your data with transparency and care.</p></div>
+            <div class="rounded-2xl border border-slate-200 p-4"><h3 class="font-semibold text-slate-900">Speed</h3><p class="text-sm text-slate-700 mt-1">Rapid installs, instant notifications, quick help.</p></div>
+            <div class="rounded-2xl border border-slate-200 p-4"><h3 class="font-semibold text-slate-900">Craft</h3><p class="text-sm text-slate-700 mt-1">Delightful details in both software and hardware.</p></div>
           </div>
         </article>
       </section>
@@ -132,36 +136,35 @@
       <section class="mt-10">
         <h2 class="text-2xl font-extrabold text-slate-900">Leadership</h2>
         <div class="mt-4 grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-          <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
-            <div class="h-14 w-14 rounded-full bg-gradient-to-r from-sky-400 to-cyan-500"></div>
-            <div class="mt-3 font-semibold text-slate-900">Avery Khan</div>
-            <div class="text-sm text-slate-600">CEO</div>
-          </div>
-          <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
-            <div class="h-14 w-14 rounded-full bg-gradient-to-r from-indigo-400 to-fuchsia-500"></div>
-            <div class="mt-3 font-semibold text-slate-900">Maya Patel</div>
-            <div class="text-sm text-slate-600">CTO</div>
-          </div>
-          <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card">
-            <div class="h-14 w-14 rounded-full bg-gradient-to-r from-emerald-400 to-teal-500"></div>
-            <div class="mt-3 font-semibold text-slate-900">Leo Martínez</div>
-            <div class="text-sm text-slate-600">Head of Support</div>
-          </div>
+          <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card"><div class="h-14 w-14 rounded-full bg-gradient-to-r from-sky-400 to-cyan-500"></div><div class="mt-3 font-semibold text-slate-900">Avery Khan</div><div class="text-sm text-slate-600">CEO</div></div>
+          <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card"><div class="h-14 w-14 rounded-full bg-gradient-to-r from-indigo-400 to-fuchsia-500"></div><div class="mt-3 font-semibold text-slate-900">Maya Patel</div><div class="text-sm text-slate-600">CTO</div></div>
+          <div class="rounded-3xl bg-white border border-slate-200 p-6 shadow-card"><div class="h-14 w-14 rounded-full bg-gradient-to-r from-emerald-400 to-teal-500"></div><div class="mt-3 font-semibold text-slate-900">Leo Martínez</div><div class="text-sm text-slate-600">Head of Support</div></div>
         </div>
       </section>
 
       <!-- CTA -->
-      <section class="mt-10 mb-14 rounded-3xl bg-white border border-slate-200 p-7 lg:p-9 shadow-card flex flex-col sm:flex-row items-start sm:items-center justify-between gap-5">
+      <section class="mt-10 mb-14 rounded-3xl bg-white border border-slate-200 p-6 sm:p-7 lg:p-9 shadow-card flex flex-col sm:flex-row items-start sm:items-center justify-between gap-5">
         <div>
           <h3 class="text-xl font-extrabold text-slate-900">Ready to get protected?</h3>
           <p class="text-slate-600 mt-1">Pick a plan or talk to us—no pressure.</p>
         </div>
-        <div class="flex gap-3">
+        <div class="flex flex-col sm:flex-row gap-3">
           <a href="pricing.html" class="btn btn-magic">See Plans</a>
           <a href="contact.html" class="btn btn-outline">Contact Us</a>
         </div>
       </section>
     </div>
   </main>
+
+  <script>
+    // Mobile menu
+    const menuBtn = document.getElementById('menuBtn');
+    const mobileMenu = document.getElementById('mobileMenu');
+    const closeMenu = document.getElementById('closeMenu');
+    const scrim = document.getElementById('scrim');
+    function openDrawer(){ mobileMenu.style.transform='translateX(0)'; scrim.style.opacity='1'; scrim.style.pointerEvents='auto'; menuBtn?.setAttribute('aria-expanded','true'); document.body.classList.add('overflow-hidden'); }
+    function closeDrawer(){ mobileMenu.style.transform='translateX(100%)'; scrim.style.opacity='0'; scrim.style.pointerEvents='none'; menuBtn?.setAttribute('aria-expanded','false'); document.body.classList.remove('overflow-hidden'); }
+    menuBtn?.addEventListener('click',openDrawer); closeMenu?.addEventListener('click',closeDrawer); scrim?.addEventListener('click',closeDrawer); window.addEventListener('keydown',e=>{ if(e.key==='Escape') closeDrawer(); });
+  </script>
 </body>
 </html>
